<resources>
    <string name="app_name">BusStationARM</string>
    <string name="kol_day">Количество рейсов в день</string>
    <string name="prise_b">Цена билета</string>
    <string name="kol_mest_bus">Количество мес т в автобусе</string>
    <string name="movement_time_to_stop">Время движения до остановки</string>
    <string name="route">Конец остановки</string>
    <string name="name_stop">Начало остановки</string>
    <string name="delet">Удалить</string>
    <string name="add">Добавить</string>
    <string name="manipul_data">Управление данными</string>
</resources>
