<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/manipul_data"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/name_stop"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/route"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/movement_time_to_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/movement_time_to_stop"
            android:textStyle="normal"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/number_of_seats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/kol_mest_bus"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/ticket_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/prise_b"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/number_flights_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/kol_day"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/boder_button"
                android:src="@drawable/ic_add_data"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/delet"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/boder_button"
                android:padding="7dp"
                android:src="@drawable/ic_delet"
                tools:ignore="ContentDescription,HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="@string/add"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/delet"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>